--- a/autonomous_robotics_ros/src/ti_mmwave_rospkg/cfg/6843AOP_3d_2_2_2.cfg
+++ b/autonomous_robotics_ros/src/ti_mmwave_rospkg/cfg/6843AOP_3d_2_2_2.cfg
@@ -1,16 +1,15 @@
 % ***************************************************************
-% Created for SDK ver:03.05
-% Created using Visualizer ver:3.5.0.0
+% Created for SDK ver:03.02
+% Created using Visualizer ver:3.2.0.0_AOP
 % Frequency:60
 % Platform:xWR68xx_AOP
 % Scene Classifier:best_range_res
 % Azimuth Resolution(deg):30 + 30
-% Range Resolution(m):0.04
-% Maximum unambiguous Range(m):9.49
-% Maximum Radial Velocity(m/s):3.03
-% Radial velocity resolution(m/s):0.38
-% Frame Duration(msec):50
-% RF calibration data:None
+% Range Resolution(m):0.047
+% Maximum unambiguous Range(m):9.02
+% Maximum Radial Velocity(m/s):4.99
+% Radial velocity resolution(m/s):0.63
+% Frame Duration(msec):33.333
 % Range Detection Threshold (dB):15
 % Doppler Detection Threshold (dB):15
 % Range Peak Grouping:enabled
@@ -26,29 +25,27 @@ dfeDataOutputMode 1
 channelCfg 15 7 0
 adcCfg 2 1
 adcbufCfg -1 0 1 1 1
-% profileCfg 0 60 23 7 114.29 0 0 35 1 288 2709 0 0 158
-profileCfg 0 60 43 7 58 0 0 68 1 256 5500 0 0 30
-% profileCfg 0 60 43 7 40 0 0 100 1 224 7000 0 0 30
+profileCfg 0 60 43 7 40 0 0 100 1 224 7000 0 0 30
 chirpCfg 0 0 0 0 0 0 0 1
 chirpCfg 1 1 0 0 0 0 0 2
 chirpCfg 2 2 0 0 0 0 0 4
-frameCfg 0 2 16 0 50 1 0
+frameCfg 0 2 16 0 33.333 1 0
 lowPower 0 0
 guiMonitor -1 1 0 0 0 0 0
-cfarCfg -1 0 2 8 4 3 0 15 1
-cfarCfg -1 1 0 4 2 3 1 15 1
-multiObjBeamForming -1 1 0.5
-clutterRemoval -1 1
+cfarCfg -1 0 2 8 4 3 0 18 1
+cfarCfg -1 1 0 4 2 3 1 18 1
+multiObjBeamForming -1 0 0.5
+clutterRemoval -1 0
 calibDcRangeSig -1 0 -5 8 256
 extendedMaxVelocity -1 0
 lvdsStreamCfg -1 0 0 0
 compRangeBiasAndRxChanPhase 0.0 1 0 -1 0 1 0 -1 0 1 0 -1 0 1 0 -1 0 1 0 -1 0 1 0 -1 0
 measureRangeBiasAndRxChanPhase 0 1.5 0.2
-CQRxSatMonitor 0 3 11 119 0
-CQSigImgMonitor 0 95 6
+CQRxSatMonitor 0 3 4 99 0
+CQSigImgMonitor 0 111 4
 analogMonitor 0 0
 aoaFovCfg -1 -90 90 -90 90
-cfarFovCfg -1 0 0 9.28
-cfarFovCfg -1 1 -3.03 3.03
+cfarFovCfg -1 0 0 8.40
+cfarFovCfg -1 1 -5.02 5.02
 calibData 0 0 0
 sensorStart
